--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -239,6 +239,36 @@
     "closeAlert": "Close alert",
     "projects": "Projects",
     "generateSubtitlesVi": "Generate Subtitles (VI)",
+    "generateTTS": "Generate Narration",
+    "generateVietnameseTTS": "Generate Vietnamese Narration",
+    "downloadSubtitle": "Download Subtitle",
+    "downloadTTSAudio": "Download Narration Audio",
+    "exportOptions": "Export Options",
+    "includeSubtitle": "Include Subtitle",
+    "includeTTSNarration": "Include TTS Narration",
+    "subtitleStyleNormal": "Normal subtitle (static)",
+    "subtitleStyleKaraoke": "Karaoke subtitle (highlight words)",
+    "exportPreview": "Export Preview:",
+    "originalVideoOnly": "Original video only",
+    "videoWithSubtitle": "Video with {style} subtitle",
+    "videoWithTTS": "Video with narration",
+    "videoWithTTSAndSubtitle": "Video with narration + {style} subtitle",
+    "exportVideoWithOptions": "Export Video with Selected Options",
+    "exportingVideo": "Exporting video...",
+    "generatingSubtitle": "Generating subtitle...",
+    "generatingTTS": "Generating narration...",
+    "downloadFinalVideo": "Download Final Video",
+    "clear": "Clear",
+    "noExportedVideo": "No exported video yet. Configure options above and click Export.",
+    "uploadNewVideo": "Upload New Video",
+    "originalVideoWithSubtitle": "Original Video with Subtitle",
+    "exportedVideo": "Exported Video",
+    "aiVoiceoverVietnamese": "AI Vietnamese Voice-over",
+    "muteOriginalAudio": "🔇 Mute Original Audio",
+    "ttsVoice": "Voice",
+    "ttsSpeed": "Speech Rate",
+    "previewVoice": "🎵 Preview",
+    "previewingVoice": "🎵 Generating sample...",
     "taskTitle": "Task title",
     "descriptionOptional": "Description (optional)",
     "editProject": "Edit Project",
@@ -263,7 +293,33 @@
     "days": "days",
     "multiple": "Multiple",
     "anytime": "Anytime",
-    "popular": "Popular"
+    "popular": "Popular",
+    "startNewProject": "Start a new video project with powerful editing tools",
+    "uploadVideoDescription": "Upload your video files to begin editing",
+    "openEditorDescription": "Access the video editor to create amazing content",
+    "recentActivity": "Recent Activity",
+    "textOverlay": "Text Overlay",
+    "addTitlesCaptions": "Add titles and captions to your videos",
+    "filtersEffects": "Filters & Effects",
+    "applyStunningEffects": "Apply stunning visual effects and filters",
+    "multiLayerEditing": "Multi-layer Editing",
+    "workWithMultipleTracks": "Work with multiple video and audio tracks",
+    "imageOverlay": "Image Overlay",
+    "addLogosWatermarks": "Add logos, watermarks and graphics",
+    "vipOnly": "VIP Only",
+    "useFeature": "Use Feature",
+    "upgradeToUnlock": "Upgrade to Unlock",
+    "editorWorkspace": "Editor Workspace",
+    "videoEditingInterface": "Advanced video editing interface will be loaded here",
+    "proTips": "Pro Tips",
+    "keyboardShortcuts": "Keyboard Shortcuts",
+    "keyboardShortcutsDesc": "Use Space to play/pause, J/K/L for playback control",
+    "fileFormats": "File Formats",
+    "fileFormatsDesc": "Support for MP4, MOV, AVI, and most common video formats",
+    "exportQuality": "Export Quality",
+    "exportQualityDesc": "Choose from 720p, 1080p, or 4K export options",
+    "autoSave": "Auto Save",
+    "autoSaveDesc": "Your work is automatically saved every 30 seconds"
   },
 
   "Form": {
