--- a/i18n/locales/vi.json
+++ b/i18n/locales/vi.json
@@ -248,6 +248,7 @@
     "cutTrimVideos": "Cắt và trim video của bạn một cách chính xác",
     "audioControls": "Điều khiển âm thanh",
     "adjustVolumeLevels": "Điều chỉnh mức âm lượng và cài đặt âm thanh",
+    "adjustVolumeMusic": "Điều chỉnh âm lượng và nhạc nền",
     "textOverlay": "Lớp phủ văn bản",
     "addTitlesCaptions": "Thêm tiêu đề, phụ đề và văn bản tùy chỉnh",
     "filtersEffects": "Bộ lọc & Hiệu ứng",
@@ -302,6 +303,36 @@
     "openEditorDescription": "Mở công cụ chỉnh sửa video",
     "projects": "Dự án",
     "generateSubtitlesVi": "Tạo phụ đề (VI)",
+    "generateTTS": "Tạo thuyết minh",
+    "generateVietnameseTTS": "Tạo thuyết minh tiếng Việt",
+    "downloadSubtitle": "Tải phụ đề",
+    "downloadTTSAudio": "Tải audio thuyết minh",
+    "exportOptions": "Tùy chọn xuất video",
+    "includeSubtitle": "Bao gồm phụ đề",
+    "includeTTSNarration": "Bao gồm thuyết minh",
+    "subtitleStyleNormal": "Phụ đề thường (tĩnh)",
+    "subtitleStyleKaraoke": "Phụ đề karaoke (highlight từng từ)",
+    "exportPreview": "Xem trước xuất:",
+    "originalVideoOnly": "Chỉ video gốc",
+    "videoWithSubtitle": "Video với phụ đề {style}",
+    "videoWithTTS": "Video với thuyết minh",
+    "videoWithTTSAndSubtitle": "Video với thuyết minh + phụ đề {style}",
+    "exportVideoWithOptions": "Xuất video với tùy chọn đã chọn",
+    "exportingVideo": "Đang xuất video...",
+    "generatingSubtitle": "Đang tạo phụ đề...",
+    "generatingTTS": "Đang tạo thuyết minh...",
+    "downloadFinalVideo": "Tải video cuối cùng",
+    "clear": "Xóa",
+    "noExportedVideo": "Chưa có video xuất. Cấu hình tùy chọn ở trên và nhấn Xuất.",
+    "uploadNewVideo": "Tải video mới",
+    "originalVideoWithSubtitle": "Video gốc với phụ đề",
+    "exportedVideo": "Video đã xuất",
+    "aiVoiceoverVietnamese": "Thuyết minh AI tiếng Việt",
+    "muteOriginalAudio": "🔇 Tắt tiếng gốc",
+    "ttsVoice": "Giọng nói",
+    "ttsSpeed": "Tốc độ nói",
+    "previewVoice": "🎵 Nghe thử",
+    "previewingVoice": "🎵 Đang tạo mẫu...",
     "taskTitle": "Tiêu đề nhiệm vụ",
     "descriptionOptional": "Mô tả (tùy chọn)",
     "editProject": "Sửa dự án",
