--- a/i18n/locales/vi.json
+++ b/i18n/locales/vi.json
@@ -302,6 +302,13 @@
     "uploadVideoDescription": "Tải lên và bắt đầu chỉnh sửa",
     "openEditorDescription": "Mở công cụ chỉnh sửa video",
     "projects": "Dự án",
+    "generateSubtitle": "Tạo phụ đề",
+    "regenerateSubtitle": "Tạo lại phụ đề",
+    "generating": "Đang tạo...",
+    "subtitleAvailable": "Có phụ đề",
+    "noSubtitleYet": "Chưa có phụ đề",
+    "download": "Tải về",
+    "preview": "Xem trước",
     "generateSubtitlesVi": "Tạo phụ đề (VI)",
     "generateTTS": "Tạo thuyết minh",
     "generateVietnameseTTS": "Tạo thuyết minh tiếng Việt",
@@ -317,7 +324,7 @@
     "videoWithSubtitle": "Video với phụ đề {style}",
     "videoWithTTS": "Video với thuyết minh",
     "videoWithTTSAndSubtitle": "Video với thuyết minh + phụ đề {style}",
-    "exportVideoWithOptions": "Xuất video với tùy chọn đã chọn",
+    "exportVideoWithOptions": "Xuất video",
     "exportingVideo": "Đang xuất video...",
     "generatingSubtitle": "Đang tạo phụ đề...",
     "generatingTTS": "Đang tạo thuyết minh...",
@@ -342,7 +349,34 @@
     "completed": "Hoàn thành",
     "active": "Hoạt động",
     "done": "Xong",
-    "of": "của"
+    "of": "của",
+    "filename": "Tên file",
+    "type": "Loại",
+    "fileSize": "Kích thước file",
+    "createdDate": "Ngày tạo",
+    "actions": "Thao tác",
+    "totalExportedVideos": "{count} video đã xuất"
+  },
+
+  "VideoUpload": {
+    "dragDropText": "🎬 Kéo thả file video hoặc nhấp để chọn",
+    "dragDropActiveText": "📁 Thả file video vào đây",
+    "browseText": "Chọn file video",
+    "supportedFormatsText": "Hỗ trợ: MP4, MOV, AVI, MKV và các định dạng video phổ biến",
+    "uploading": "Đang tải lên...",
+    "uploadedVideos": "Video đã tải lên",
+    "fileSizeError": "File \"{fileName}\" quá lớn. Kích thước tối đa: {maxSize}MB",
+    "invalidFileTypeError": "File \"{fileName}\" không phải là video hợp lệ",
+    "uploadSuccess": "\"{fileName}\" đã được tải lên thành công",
+    "uploadFailed": "Tải lên thất bại",
+    "uploadError": "Có lỗi xảy ra khi tải lên",
+    "duration": "Thời lượng",
+    "dimensions": "Kích thước",
+    "fileSize": "Dung lượng file",
+    "fileName": "Tên file",
+    "removeVideo": "Xóa video",
+    "playVideo": "Phát video",
+    "videoPreview": "Xem trước video"
   },
 
   "RightPanel": {
